--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,7 +36,7 @@
     }
 
     var socket;
-    var userId = 123;
+    var userId = "123-343";
     if (typeof (WebSocket) == "undefined") {
         console.log("can no useWebSocket");
     } else {
